Changed getUserProfile endpoints
